# Agon

./: README.md  agon.cabal  stack.yaml
app/: API.hs
app/Agon/: API.hs  APIConstructors.hs  Agon.hs  Auth.hs  Data.hs  FBAuth.hs  HTTP.hs  Instances.hs  Server.hs  ServerConstructors.hs  Types.hs
app/Agon/Data/: Instances.hs
static/: index.html
static/css/: main.css
static/js/: app.js  client.js  config.js  ctrl-events.js  ctrl-update-event.js  dirs.js  init.js
static/tmpl/: about.html  ag-dialog.html  ag-empty-list.html  ag-event.html  ag-loading.html  ag-team.html  ag-user.html  ag-workout.html  athletes.html  events.html  home.html  inc-update-event-details.html  inc-update-event-entrants.html  inc-update-event-workouts.html  teams.html  update-event.html
