name:                agon
version:             0.1.0
synopsis:            Crossfit competition management
description:         Crossfit competition management
homepage:            http://github.com/feeniks/agon#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           2015 Ralph Morton
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable agon-api
  hs-source-dirs:      app
  main-is:             API.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl >= 2.1.3.1
                     , time >= 1.4.2
                     , bytestring >= 0.10.4.0
                     , text >= 1.2.0
                     , containers >= 0.5.5.1
                     , lens >= 4.7.0.1
                     , aeson >= 0.8.0.2
                     , servant-server >= 0.4.4.5
                     , wai >= 3.0.4.0
                     , wai-middleware-static >= 0.8.0
                     , warp >= 3.1.3.1
                     , base16-bytestring >= 0.1.1.6
                     , word8 >= 0.1.2
                     , cipher-aes >= 0.2.10
                     , either >= 4.4.1
                     , http-conduit >= 2.1.8
                     , http-types >= 0.8.6
                     , http-client >= 0.4.24
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/feeniks/agon
